fixed shop_villager css spacing

--- a/static/css/shop_villagers.css
+++ b/static/css/shop_villagers.css
@@ -1,4 +1,4 @@
-.island-input {
+/* .island-input {
   display: flex;
   justify-content: center;
 }
@@ -9,9 +9,9 @@
 
 .island-btn{
   width: 75%;
-}
+} */
 
-.carousel-wrapper {
+/* .carousel-wrapper {
   position: relative;
   width: 70%;
   height: 70%;
@@ -22,15 +22,15 @@
   background-image: linear-gradient(#FFFFFF 50%, #FFFFFF 50%, #F0F3FC 50%);
   box-shadow: 0px 12px 39px -19px rgba(0, 0, 0, 0.75);
   overflow: hidden;
-}
-.carousel-wrapper .carousel {
+} */
+/* .carousel-wrapper .carousel {
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
   width: 100%;
   height: auto;
-}
-.carousel-wrapper .carousel .carousel-cell {
+} */
+/* .carousel-wrapper .carousel .carousel-cell {
   padding: 10px;
   background-color: #FFFFFF;
   width: 20%;
@@ -38,6 +38,10 @@
   min-width: 120px;
   margin: 0 20px;
   transition: transform 500ms ease;
+} */
+
+.carousel {
+  height: 575px;
 }
 
 .h3 {
